Potential fix for text jumping, added rotate(0.0001deg)

--- a/loftschool-landing/assets/css/layout/settings.sass
+++ b/loftschool-landing/assets/css/layout/settings.sass
@@ -21,6 +21,8 @@ h1, h2, h3, h4, h5, h6, p
 	margin: 0 auto
 
 .main
+	position: absolute
+	width: 100%
 	transition: transform 800ms cubic-bezier(.79,.21,.08,1.00)
 
 .section
