--- a/loftschool-landing/assets/css/sections/offers/offers-section.sass
+++ b/loftschool-landing/assets/css/sections/offers/offers-section.sass
@@ -34,6 +34,7 @@
 		overflow-wrap: break-word
 		color: white
 		margin-bottom: 50px
+		transform: rotate(0.00001deg)
 
 	&__burger-price
 		line-height: 28px
